fixes (hopefully) the vertical centering issue on mobile

--- a/ui/src/pages/Video/index.css
+++ b/ui/src/pages/Video/index.css
@@ -2,5 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  overflow-y: auto;
 }
